apps/onward/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: onward
  namespace: onward
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: onward
  template:
    metadata:
      labels:
        app: onward
    spec:
      imagePullSecrets:
        - name: ghcr-pull-secret
      containers:
        - name: onward
          image: ghcr.io/thysmajs/onward:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "384Mi"
              cpu: "300m"
