apps/onward/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: onward
  namespace: onward
spec:
  selector:
    app: onward
  ports:
    - port: 80
      targetPort: 3000
